[package]
name = "payment_engine"
version = "0.1.0"
edition = "2018"
authors = ["Juhasz Sandor <juhasz.sandor.1987@gmail.com>"]

[dependencies]
clap = "2.33"
csv = "1.1"
itertools = "0.10"
rayon = "1.5"
rust_decimal = { version = "1.16", features = ["serde-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
